--- a/step1.html
+++ b/step1.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>第一步：搭架子</title>
-        <script type="text/javascript" src="../lib/three.js"></script>
+        <script type="text/javascript" src="./lib/three.js"></script>
         <style type="text/css">
             div#canvas-frame {
                 cursor: pointer;
