--- a/step4.html
+++ b/step4.html
@@ -224,7 +224,7 @@
                 //监听触摸事件
                 window.addEventListener('touchstart', startCube, false);
                 window.addEventListener('touchmove', moveCube, false);
-                window.addEventListener('touchmove', moveCube, false);
+                window.addEventListener('touchend', stopCube, false);
             }
 
             //魔方操作结束
