--- a/step4.html
+++ b/step4.html
@@ -306,7 +306,7 @@
                     startPoint = null;
                     updateCubeIndex(elements);
                     //转动之后需要更新魔方此时所处的状态
-                    console.log(updateCubeStatus());
+                    updateCubeStatus();
                 }
                 switch(direction){
                     //绕z轴顺时针
