--- a/step5.html
+++ b/step5.html
@@ -19,6 +19,16 @@
 								.catch(function(err) {
 									console.log("An error occured! " + err);
 								});
+
+			//识别魔方
+
+			//获取魔方六色
+
+			//追踪魔方六色根据位置信息获得每个面的分布
+
+			//已知六个面的分布合成虚拟魔方
+
+			//根据魔方还原算法，还原虚拟魔方
 		}
 	</script>
 </body>
