--- a/step5.html
+++ b/step5.html
@@ -12,9 +12,14 @@
                 height:100%;
                 background-color: #EEEEEE;
             }
+            button#autoResetV1{
+            	position: fixed;
+            	z-index:100;
+            }
         </style>
     </head>
     <body onload="threeStart();">
+    	<button id="autoResetV1">自动还原一</button>
         <div id="canvas-frame"></div>
         <script>
             var renderer;//渲染器
@@ -65,6 +70,8 @@
 						break;
 					}
 				}
+				console.log(camera);
+				//console.log(topCenter);
 				getTopFaceColor(topCenter)
             }
             //根据颜色序号获取初始化时其对面颜色序号
@@ -79,12 +86,14 @@
             function getTopFaceColor(cube){
             	var materials = cube.material.materials;
             	var faces = cube.geometry.faces;
+            	var normalMatrix = cube.normalMatrix;
             	for(var i=0;i<faces.length;i++){
-            		if(faces[i].normal.angleTo(yLine)==0){
-            			document.body.appendChild(materials[faces[i].materialIndex].map.image);
-            			$frame.style.display = 'none';
-            			//console.log(materials[faces[i].materialIndex].map.image);
-            		}
+            		console.log(faces[i].normal.applyMatrix3(normalMatrix).angleTo(yLine));
+            		// if(faces[i].normal.applyMatrix3(normalMatrix).angleTo(yLine)==0){
+            		// 	document.body.appendChild(materials[faces[i].materialIndex].map.image);
+            		// 	$frame.style.display = 'none';
+            		// 	console.log(materials[faces[i].materialIndex].map.image);
+            		// }
             	}
             }
 
@@ -174,6 +183,7 @@
                         cube.position.x = (x+len/2)+(j%3)*len;
                         cube.position.y = (y-len/2)-parseInt(j/3)*len;
                         cube.position.z = (z-len/2)-i*len;
+                        cube.matrixWorldNeedsUpdate = true;
 
                         cubes.push(cube)
                     }
@@ -269,7 +279,9 @@
                 controller = new THREE.OrbitControls(camera, renderer.domElement);
                 controller.target = new THREE.Vector3(0, 0, 0);//设置控制点
 
-                document.body.addEventListener('click',function(){
+                //自动还原一
+                var $autoResetV1 = document.querySelector('#autoResetV1');
+                $autoResetV1.addEventListener('click',function(){
                 	autoResetV1(cubes)
                 },false);
             }
